Bug 1849763 - Make `HTMLEditor::HandleInsertBRElement` suggest caret position as at the invisible <br> if inserted r=jjaschke

If `HTMLEditor::HandleInsertBRElement` inserts an invisible `<br>` element
after a `<br>` element which is requested, new caret position should be
at the invisible `<br>` element.

Differential Revision: https://phabricator.services.mozilla.com/D189997